Fix signup form overflow under nav on err display

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1369,6 +1369,7 @@ hr {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 .form-container {
@@ -1380,6 +1381,10 @@ hr {
     text-align: center;
     margin: auto;
     top: 175px;
+}
+
+.form-margin-top {
+    margin-top: 30px !important;
 }
 
 .form-container h2 {
